Fixed code snippets not clipping to article width. Added support for github-style checkboxes in markdown ( [ ] and [x] ). Introduced clipping of sidebar when viewport is not high enough to fit all of the navigation. Minor improvements of proportions.

--- a/readdy_documentation/_sass/_base.scss
+++ b/readdy_documentation/_sass/_base.scss
@@ -2,6 +2,9 @@ $font-style: 'Source Sans Pro', sans-serif;
 //$heading-font: 'Lato', sans-serif;
 //$heading-font: 'Roboto Slab', serif;
 $heading-font: 'Lora', serif;
+//$mono-font: 'Inconsolata', monospace;
+//$mono-font: 'Roboto Mono', monospace;
+$mono-font: Consolas, "Liberation Mono", Menlo,Courier,monospace;
 $link-color: #425469;
 $link-hover-color: #19CCAA;
 $light: #E7EDF4;
